--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
     />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Movies</title>
+    <title>Social Media</title>
   </head>
   <body>
     <div id="root"></div>
